--- a/mi_app/package.json
+++ b/mi_app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first-angular-app",
+  "name": "mi-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:first-angular-app": "node dist/first-angular-app/server/server.mjs"
+    "serve:ssr:mi_app": "node dist/mi_app/server/server.mjs"
   },
   "private": true,
   "dependencies": {
